--- a/eli5_experiment.ipynb
+++ b/eli5_experiment.ipynb
@@ -60,7 +60,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\sergi\\AppData\\Local\\Temp\\ipykernel_57576\\750042844.py:4: LangChainDeprecationWarning: The class `TavilySearchResults` was deprecated in LangChain 0.3.25 and will be removed in 1.0. An updated version of the class exists in the `langchain-tavily package and should be used instead. To use it run `pip install -U `langchain-tavily` and import as `from `langchain_tavily import TavilySearch``.\n",
+      "C:\\Users\\sergi\\AppData\\Local\\Temp\\ipykernel_55712\\750042844.py:4: LangChainDeprecationWarning: The class `TavilySearchResults` was deprecated in LangChain 0.3.25 and will be removed in 1.0. An updated version of the class exists in the `langchain-tavily package and should be used instead. To use it run `pip install -U `langchain-tavily` and import as `from `langchain_tavily import TavilySearch``.\n",
       "  web_search_tool = TavilySearchResults(max_results=1)\n"
      ]
     }
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,9 +251,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We'll define a function to give an LLM our application's outputs, alongside the reference outputs stored in our dataset. \n",
+    "Vamos a definir una función para darle a un LLM las salidas de nuestra aplicación, junto con las salidas de referencia guardadas en nuestro conjunto de datos.\n",
     "\n",
-    "The LLM will then be able to reference the \"right\" output to judge if our application's answer meets our accuracy standards."
+    "De este modo, el LLM podrá usar la respuesta “correcta” como referencia para juzgar si la respuesta de nuestra aplicación cumple con nuestros estándares de precisión."
    ]
   },
   {
@@ -268,29 +268,30 @@
     "\n",
     "def correctness(inputs: dict, outputs: dict, reference_outputs: dict) -> bool:\n",
     "    prompt = \"\"\"\n",
-    "    You are an expert data labeler evaluating model outputs for correctness. Your task is to assign a score based on the following rubric:\n",
+    "    Sos un etiquetador de datos experto que evalúa las respuestas de un modelo para verificar su corrección.\n",
+    "Tu tarea es asignar una puntuación basada en la siguiente rúbrica:\n",
     "\n",
     "    <Rubric>\n",
-    "        A correct answer:\n",
-    "        - Provides accurate information\n",
-    "        - Uses suitable analogies and examples\n",
-    "        - Contains no factual errors\n",
-    "        - Is logically consistent\n",
+    "        Una respuesta correcta:\n",
+    "            - Brinda información precisa\n",
+    "            - Usa analogías y ejemplos adecuados\n",
+    "            - No contiene errores fácticos\n",
+    "            - Es lógicamente consistente\n",
     "\n",
-    "        When scoring, you should penalize:\n",
-    "        - Factual errors\n",
-    "        - Incoherent analogies and examples\n",
-    "        - Logical inconsistencies\n",
+    "        Al puntuar, debés penalizar:\n",
+    "            - Errores fácticos\n",
+    "            - Analogías y ejemplos incoherentes\n",
+    "            - Inconsistencias lógicas    \n",
     "    </Rubric>\n",
     "\n",
     "    <Instructions>\n",
-    "        - Carefully read the input and output\n",
-    "        - Use the reference output to determine if the model output contains errors\n",
-    "        - Focus whether the model output uses accurate analogies and is logically consistent\n",
+    "        - Leé con atención la entrada y la salida.\n",
+    "        - Usá la salida de referencia para determinar si la salida del modelo contiene errores.\n",
+    "        - Concentrate en si la salida del modelo usa analogías precisas y es lógicamente consistente.\n",
     "    </Instructions>\n",
     "\n",
     "    <Reminder>\n",
-    "        The analogies in the output do not need to match the reference output exactly. Focus on logical consistency.\n",
+    "        Las analogías de la salida no necesitan coincidir exactamente con la salida de referencia. Concentrate en la consistencia lógica.\n",
     "    </Reminder>\n",
     "\n",
     "    <input>\n",
@@ -301,7 +302,7 @@
     "        {}\n",
     "    </output>\n",
     "\n",
-    "    Use the reference outputs below to help you evaluate the correctness of the response:\n",
+    "    Usá las salidas de referencia que aparecen abajo para ayudarte a evaluar la corrección de la respuesta.\n",
     "    <reference_outputs>\n",
     "        {}\n",
     "    </reference_outputs>\n",
@@ -315,14 +316,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Define Run Function"
+    "### Definir Run Function"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We'll define a function to run our application on the example inputs of our dataset. This is function that will be called when we run our experiment."
+    "Vamos a definir una función para ejecutar nuestra aplicación sobre las entradas de ejemplo de nuestro dataset. Esta es la función que se va a llamar cuando ejecutemos nuestro experimento."
    ]
   },
   {
@@ -331,7 +332,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 4. Define a function to run your application\n",
+    "# Definir una función para ejecutar tu aplicación.\n",
     "def run(inputs: dict):\n",
     "    return eli5(inputs[\"question\"])"
    ]
@@ -340,19 +341,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Run Experiment"
+    "## Correr experimento"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have all the necessary components, so let's run our experiment! "
+    "Tenemos todos los componentes necesarios, así que ejecutemos nuestro experimento!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -367,8 +368,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "View the evaluation results for experiment: 'eli5-o3-mini-61a07e79' at:\n",
-      "https://smith.langchain.com/o/11afda74-8804-4cb8-8ad4-c2a9d67d44e5/datasets/0a5a0302-cfaf-44b4-9de9-e4b312e514fd/compare?selectedSessions=8d191364-db83-488c-a737-6a5f8a44bd6f\n",
+      "View the evaluation results for experiment: 'eli5-o4-mini-e36162a4' at:\n",
+      "https://smith.langchain.com/o/11afda74-8804-4cb8-8ad4-c2a9d67d44e5/datasets/0a5a0302-cfaf-44b4-9de9-e4b312e514fd/compare?selectedSessions=3af3ae00-128f-46f1-9e99-55d2e97544d5\n",
       "\n",
       "\n"
      ]
@@ -381,7 +382,7 @@
       "            id = uuid7()\n",
       "Future versions will require UUID v7.\n",
       "  input_data = validator(cls_, input_data)\n",
-      "10it [01:49, 10.94s/it]\n"
+      "10it [01:20,  8.04s/it]\n"
      ]
     },
     {
@@ -420,129 +421,129 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Qué es la macroeconomía?</td>\n",
-       "      <td>Imagínate que la economía es como un enorme ro...</td>\n",
+       "      <td>Imagina que la economía de un país es como una...</td>\n",
        "      <td>None</td>\n",
        "      <td>La macroeconomía es como una lupa gigante que ...</td>\n",
        "      <td>True</td>\n",
        "      <td>True</td>\n",
-       "      <td>7.366929</td>\n",
+       "      <td>5.993207</td>\n",
        "      <td>15d24932-295f-473e-b1d2-086f1bd2f32d</td>\n",
-       "      <td>019a9ed9-85d0-763c-bb46-778f015b7991</td>\n",
+       "      <td>019a9efa-135a-7140-a800-9171ae7f4598</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Why is the sky blue?</td>\n",
-       "      <td>Imagine you have a box with lots of colored pe...</td>\n",
+       "      <td>Imagine the Sun’s light is like a box of crayo...</td>\n",
        "      <td>None</td>\n",
        "      <td>Alright! Imagine the sky is like a big bowl of...</td>\n",
        "      <td>True</td>\n",
        "      <td>True</td>\n",
-       "      <td>10.035590</td>\n",
+       "      <td>4.682507</td>\n",
        "      <td>1af9dae1-8130-46b1-9efd-2b9a381f2b0f</td>\n",
-       "      <td>019a9ed9-b613-721b-860f-856d0931ffdf</td>\n",
+       "      <td>019a9efa-3393-71a5-80f1-eec579ee8f8e</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>How does string theory work?</td>\n",
-       "      <td>Imagine that everything in the universe is mad...</td>\n",
+       "      <td>Imagina que todo lo que ves, incluso tú y yo, ...</td>\n",
        "      <td>None</td>\n",
        "      <td>Okay! Imagine that everything in the universe,...</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
-       "      <td>11.949423</td>\n",
+       "      <td>8.736447</td>\n",
        "      <td>4054da81-5869-484d-916c-e12c19059078</td>\n",
-       "      <td>019a9ed9-e157-74c9-be41-7562da2ffc48</td>\n",
+       "      <td>019a9efa-484d-70d1-9b1a-10772ba94e9c</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>How does photosynthesis work?</td>\n",
-       "      <td>Imagine that a plant is like a little chef in ...</td>\n",
+       "      <td>Imagina que una planta es como una cocinita má...</td>\n",
        "      <td>None</td>\n",
        "      <td>Okay! Imagine plants are like tiny chefs, and ...</td>\n",
        "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>11.735456</td>\n",
+       "      <td>False</td>\n",
+       "      <td>7.778148</td>\n",
        "      <td>8edadc77-fb59-4aa1-9bb3-4a0e369c50af</td>\n",
-       "      <td>019a9eda-1376-732b-ab95-2d8f0b5d46c9</td>\n",
+       "      <td>019a9efa-6dfd-7269-aebf-4e27b9b4b710</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>What is trustcall library?</td>\n",
-       "      <td>Imagine you have a big box of LEGOs that you u...</td>\n",
+       "      <td>Imagina que tienes un gran libro de dibujos y ...</td>\n",
        "      <td>None</td>\n",
        "      <td>Alright, imagine you have a toy box where each...</td>\n",
-       "      <td>False</td>\n",
        "      <td>True</td>\n",
-       "      <td>9.853126</td>\n",
+       "      <td>True</td>\n",
+       "      <td>6.479814</td>\n",
        "      <td>a661d0ce-9672-4a25-b813-104ea367db23</td>\n",
-       "      <td>019a9eda-47d5-71a7-b6fb-b4d515be7d42</td>\n",
+       "      <td>019a9efa-9048-7794-88fa-5b4c99d46d7d</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>How does a democracy work?</td>\n",
-       "      <td>Imagine you and your friends need to choose wh...</td>\n",
+       "      <td>Imagina que tú y tus amigos quieren escoger un...</td>\n",
        "      <td>None</td>\n",
        "      <td>Okay! Imagine you and your friends want to dec...</td>\n",
        "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>6.848612</td>\n",
+       "      <td>False</td>\n",
+       "      <td>7.127248</td>\n",
        "      <td>acd456da-cd68-4842-bcfe-60049549e0eb</td>\n",
-       "      <td>019a9eda-72f8-7778-b5f3-1c1ac59e2739</td>\n",
+       "      <td>019a9efa-aca1-740e-b4d6-ebd6e79a809c</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>What is LangSmith by LangChain?</td>\n",
-       "      <td>Imagine you have a very smart toy robot that t...</td>\n",
+       "      <td>Imagine you built a little talking robot that ...</td>\n",
        "      <td>None</td>\n",
        "      <td>Okay! Imagine you have a big box of toys that ...</td>\n",
+       "      <td>False</td>\n",
        "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>8.322277</td>\n",
+       "      <td>10.696698</td>\n",
        "      <td>b80f2c35-2d23-400d-9963-83cfdb4a0026</td>\n",
-       "      <td>019a9eda-909a-7055-86b0-7ac733be8468</td>\n",
+       "      <td>019a9efa-ccc5-745d-86ec-0d3c6981801b</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>What is the Langchain framework?</td>\n",
-       "      <td>Imagine you have a big box of colorful LEGO br...</td>\n",
+       "      <td>Imagina que quieres montar un castillo de LEGO...</td>\n",
        "      <td>None</td>\n",
        "      <td>Okay! Imagine you want to build a really cool ...</td>\n",
        "      <td>True</td>\n",
        "      <td>True</td>\n",
-       "      <td>9.396697</td>\n",
+       "      <td>7.235491</td>\n",
        "      <td>bb1147ea-5e7a-4445-bba4-fcafb900d5dc</td>\n",
-       "      <td>019a9eda-b503-757f-bd9d-71c345e378c3</td>\n",
+       "      <td>019a9efa-f96d-7300-9cd3-4c710edd6e79</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>What is sound?</td>\n",
-       "      <td>Imagine you’re playing with a drum. When you h...</td>\n",
+       "      <td>Sound is what we hear when something “wiggles”...</td>\n",
        "      <td>None</td>\n",
        "      <td>Okay! Imagine you have a drum. When you hit it...</td>\n",
        "      <td>True</td>\n",
        "      <td>True</td>\n",
-       "      <td>8.593642</td>\n",
+       "      <td>5.162881</td>\n",
        "      <td>bf115918-1d03-48c0-a4ef-a33ee567533f</td>\n",
-       "      <td>019a9eda-ddae-74fe-8fc4-b369cd7ada2d</td>\n",
+       "      <td>019a9efb-1b8d-748c-9841-131e0a90c24a</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>What is LangGraph?</td>\n",
-       "      <td>Imagine you have a big box of LEGO pieces, and...</td>\n",
+       "      <td>Imagina que quieres construir un castillo de L...</td>\n",
        "      <td>None</td>\n",
        "      <td>Okay, imagine you have a big box of LEGO brick...</td>\n",
        "      <td>True</td>\n",
        "      <td>True</td>\n",
-       "      <td>10.463656</td>\n",
+       "      <td>5.745662</td>\n",
        "      <td>d7a5d945-7662-45ab-9099-634e1544c56c</td>\n",
-       "      <td>019a9edb-0246-776d-a1c9-a8ce5ca8d223</td>\n",
+       "      <td>019a9efb-327b-775a-ae02-928dcea607e8</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "<ExperimentResults eli5-o3-mini-61a07e79>"
+       "<ExperimentResults eli5-o4-mini-e36162a4>"
       ]
      },
      "execution_count": 9,
