--- a/eli5_experiment.ipynb
+++ b/eli5_experiment.ipynb
@@ -60,7 +60,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\sergi\\AppData\\Local\\Temp\\ipykernel_55712\\750042844.py:4: LangChainDeprecationWarning: The class `TavilySearchResults` was deprecated in LangChain 0.3.25 and will be removed in 1.0. An updated version of the class exists in the `langchain-tavily package and should be used instead. To use it run `pip install -U `langchain-tavily` and import as `from `langchain_tavily import TavilySearch``.\n",
+      "C:\\Users\\sergi\\AppData\\Local\\Temp\\ipykernel_20512\\750042844.py:4: LangChainDeprecationWarning: The class `TavilySearchResults` was deprecated in LangChain 0.3.25 and will be removed in 1.0. An updated version of the class exists in the `langchain-tavily package and should be used instead. To use it run `pip install -U `langchain-tavily` and import as `from `langchain_tavily import TavilySearch``.\n",
       "  web_search_tool = TavilySearchResults(max_results=1)\n"
      ]
     }
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
     "\n",
     "client = Client()\n",
     "#dataset_name = \"eli5-silver\"\n",
-    "dataset_name = \"ds-new-crystallography-60\""
+    "dataset_name = \"ds-silver-turmeric-30\""
    ]
   },
   {
