--- a/eli5_tracing.ipynb
+++ b/eli5_tracing.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
        "True"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,18 +174,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Imagina que la economía de un país es como un enorme parque de diversiones. En este parque, hay muchas atracciones, como montañas rusas, juegos de agua y carruseles. Ahora, la macroeconomía es como un grupo de personas que mira todo el parque desde arriba, en lugar de enfocarse solo en una atracción específica.\n",
+      "¡Claro! Imagina que la economía es como una gran fiesta con muchas personas. La macroeconomía es la parte que mira a toda la fiesta en lugar de solo a una persona o a un grupo pequeño.\n",
       "\n",
-      "La macroeconomía estudia cosas grandes y importantes sobre el parque entero, como cuántas personas vienen a divertirse, cuántas atracciones hay, si hay suficiente comida y bebida para todos, y si las entradas son baratas o caras. También se fija en si las personas están felices y trabajadoras para ayudar a que el parque funcione bien.\n",
+      "Entonces, en vez de fijarnos en lo que le pasa a un niño con su juguete, la macroeconomía observa cosas como cuántos niños están en la fiesta, si hay suficiente comida para todos, y si están todos felices o no. Eso incluye cosas como si la gente tiene trabajo, si los precios de las cosas suben o bajan, y cómo los adultos (los gobiernos) tratan de que todo funcione mejor.\n",
       "\n",
-      "Así que, en resumen, la macroeconomía es el estudio de cómo funciona toda la economía de un país, mirando todo en general en lugar de solo una parte.\n"
+      "Así que, en resumen, la macroeconomía nos ayuda a entender cómo va la fiesta grande que es la economía de un país.\n"
      ]
     }
    ],
@@ -197,7 +197,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
