--- a/eli5_tracing.ipynb
+++ b/eli5_tracing.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
        "True"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,13 +70,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_community.tools.tavily_search import TavilySearchResults\n",
+    "from langchain_tavily import TavilySearch\n",
     "\n",
-    "web_search_tool = TavilySearchResults(max_results=1)"
+    "web_search_tool = TavilySearch(\n",
+    "    max_results=1\n",
+    ")"
    ]
   },
   {
@@ -88,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,9 +144,14 @@
     "@traceable\n",
     "def search(question):\n",
     "    web_docs = web_search_tool.invoke({\"query\": question})\n",
-    "    web_results = \"\\n\".join([d[\"content\"] for d in web_docs])\n",
-    "    return web_results\n",
-    "    \n",
+    "    if isinstance(web_docs, str):\n",
+    "        return web_docs\n",
+    "    return \"\\n\".join(\n",
+    "        d if isinstance(d, str)\n",
+    "        else d.get(\"content\", \"\")\n",
+    "        for d in web_docs\n",
+    "    )\n",
+    "\n",
     "@traceable\n",
     "def explain(question, context):\n",
     "    formatted = prompt.format(question=question, context=context)\n",
@@ -174,18 +181,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "¡Claro! Imagina que la economía es como una gran fiesta con muchas personas. La macroeconomía es la parte que mira a toda la fiesta en lugar de solo a una persona o a un grupo pequeño.\n",
+      "La macroeconomía es como mirar a un país desde lejos, como si fueras un pájaro volando por encima. En vez de fijarte en una sola persona o familia, te fijas en todo lo que hacen las personas en ese país. \n",
       "\n",
-      "Entonces, en vez de fijarnos en lo que le pasa a un niño con su juguete, la macroeconomía observa cosas como cuántos niños están en la fiesta, si hay suficiente comida para todos, y si están todos felices o no. Eso incluye cosas como si la gente tiene trabajo, si los precios de las cosas suben o bajan, y cómo los adultos (los gobiernos) tratan de que todo funcione mejor.\n",
+      "Piensa en esto: si todos en un país compran muchas cosas, como juguetes o comida, eso se llama \"economía\". La macroeconomía estudia eso, cómo le va a todo el mundo, cuántos trabajos hay, y si la gente tiene suficiente dinero para vivir bien. \n",
       "\n",
-      "Así que, en resumen, la macroeconomía nos ayuda a entender cómo va la fiesta grande que es la economía de un país.\n"
+      "Así que, en resumen, la macroeconomía es lo que pasa en un país completo acerca de todo el dinero y las cosas que compramos y vendemos. ¡Es como contar cuántos globos de diferentes colores hay en una fiesta, pero en lugar de globos, se trata de dinero y cosas que la gente usa!\n"
      ]
     }
    ],
@@ -197,7 +204,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "cursoGenAI",
    "language": "python",
    "name": "python3"
   },
@@ -211,7 +218,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.13.11"
   }
  },
  "nbformat": 4,
