--- a/eli5_types.ipynb
+++ b/eli5_types.ipynb
@@ -142,7 +142,7 @@
     "# output = [\"assistant\", \"Claro, ¿para qué hora le gustaría reservar la mesa?\"]\n",
     "\n",
     "@traceable(\n",
-    "  #  run_type=\"llm\"\n",
+    "   run_type=\"llm\"\n",
     ")\n",
     "def chat_model(messages: list):\n",
     "  return output\n",
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
        "  'metadata': {'foo': 'bar'}}]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,15 +202,15 @@
     "  return [\n",
     "      {\n",
     "          \"page_content\": r,\n",
-    "          \"doc_type\": \"Document\"\n",
-    "          #\"type\": \"Document\",\n",
+    "          # \"doc_type\": \"Document\",\n",
+    "          \"type\": \"Document\",\n",
     "          \"metadata\": {\"foo\": \"bar\"}\n",
     "      }\n",
     "      for r in results\n",
     "  ]\n",
     "\n",
     "@traceable(\n",
-    "    #run_type=\"retriever\"\n",
+    "    run_type=\"retriever\"\n",
     ")\n",
     "def retrieve_langsmith_docs(query):\n",
     "  # Retriever que devuelve documentos de prueba hardcodeados.\n",
@@ -237,16 +237,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ChatCompletion(id='chatcmpl-CdfooBhyveGCJETfbY1LFoaGJrHMP', choices=[Choice(finish_reason='stop', index=0, logprobs=None, message=ChatCompletionMessage(content='Lo siento, no puedo acceder a información en tiempo real sobre el clima. Te recomiendo que consultes una aplicación de clima o un sitio web confiable para obtener la información más actualizada sobre el clima en Buenos Aires.', refusal=None, role='assistant', annotations=[], audio=None, function_call=None, tool_calls=None))], created=1763571578, model='gpt-4o-mini-2024-07-18', object='chat.completion', service_tier='default', system_fingerprint='fp_560af6e559', usage=CompletionUsage(completion_tokens=44, prompt_tokens=92, total_tokens=136, completion_tokens_details=CompletionTokensDetails(accepted_prediction_tokens=0, audio_tokens=0, reasoning_tokens=0, rejected_prediction_tokens=0), prompt_tokens_details=PromptTokensDetails(audio_tokens=0, cached_tokens=0)))"
+       "ChatCompletion(id='chatcmpl-CqwPLrXSJOrRG6xCoSxtfjv21MAPd', choices=[Choice(finish_reason='stop', index=0, logprobs=None, message=ChatCompletionMessage(content='Lo siento, no puedo acceder a información en tiempo real sobre el clima. Te recomiendo que consultes una aplicación de clima o un sitio web confiable para obtener la información más actualizada sobre el clima en Buenos Aires.', refusal=None, role='assistant', annotations=[], audio=None, function_call=None, tool_calls=None))], created=1766733611, model='gpt-4o-mini-2024-07-18', object='chat.completion', service_tier='default', system_fingerprint='fp_c4585b5b9c', usage=CompletionUsage(completion_tokens=44, prompt_tokens=89, total_tokens=133, completion_tokens_details=CompletionTokensDetails(accepted_prediction_tokens=0, audio_tokens=0, reasoning_tokens=0, rejected_prediction_tokens=0), prompt_tokens_details=PromptTokensDetails(audio_tokens=0, cached_tokens=0)))"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +331,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "cursoGenAI",
    "language": "python",
    "name": "python3"
   },
@@ -345,7 +345,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.13.11"
   }
  },
  "nbformat": 4,
